--- a/scss/lib/_variables.scss
+++ b/scss/lib/_variables.scss
@@ -35,7 +35,12 @@ $primary-color: #E83D61;
 $secondary-color: #4B267F;
 $text-color: #1D252D;
 
+$pad2 :2px;
+$pad3 :3px;
 $pad :5px;
+
+$marg2 :2px;
+$marg3 :3px;
 $marg :5px;
 
 // FONT SIZES
