--- a/scss/malga.min.scss
+++ b/scss/malga.min.scss
@@ -43,11 +43,14 @@
 
 // == MODULES
 @import 'modules/_home.banner';
+@import 'modules/_page.header';
 @import 'modules/_feature.list';
 @import 'modules/_feature.slider';
 @import 'modules/_article.list';
 @import 'modules/_story.list';
 @import 'modules/_faqs';
+@import 'modules/_enquiries';
+@import 'modules/_feature.list.tab';
 
 
 // == COMPONENTS
