--- a/scss/modules/_faqs.scss
+++ b/scss/modules/_faqs.scss
@@ -20,6 +20,10 @@
         header{
             h2{
                 color:$white; 
+                padding-left:0px;  
+                &:before {
+                    display: none;
+                }
             }
         }
 
