--- a/scss/modules/_feature.slider.scss
+++ b/scss/modules/_feature.slider.scss
@@ -1,7 +1,12 @@
-.feature-grid{ 
-
+.feature-grid{     
     .inner{
         header{
+            h2{  
+                padding-left:0px;  
+                &:before {
+                    display: none;
+                }
+            }
             p{
                 @include font-size(20px, 16px);
 
