--- a/scss/partials/_general.layout.scss
+++ b/scss/partials/_general.layout.scss
@@ -1,49 +1,66 @@
 // Fixed Background Images
-.fixed-bg{
-    @include bgCover;
-    background-attachment: fixed;
-    position: relative;    
+[class*=block-] {
+    background: #fff;
+    @include border-radius(20px);
+    @include box-shadow(0 0px 10px 0px rgba(34, 34, 34, 0.2));
+    overflow: hidden;    
 }
 
-// Fixed Background Images
-.full-bg{
-    @include bgCover;    
-    position: relative;
+[class*=content-] header {
+    text-align: left;
 }
 
-.intro-block{
-    position: relative;
-    @include selfClearing;
-    text-align: center; 
-}
-
-
-.head-block{
-    position: relative;
-    @include selfClearing;  
-    text-align: center;  
+.multi-feature-nav{
+    list-style:none;
+    width: 100%;  
+    margin-bottom: 4*$marg; 
     
-    h3{
-        position: relative;
-        border-bottom:1px solid $b;
-        display: inline-block;
-        padding-bottom: 10px;
+    .mfn-item {
+        display: inline-block;            
+        width: 100%;   
+        @include font-size(18px, 16px);         
+        border: 1px solid #f5f5f5;
+        @include box-shadow(0 0px 15px rgba(29,37,45,0.2));
+        @include border-radius(20px);
+        padding:2*$pad; 
+        margin: 2*$marg 0;          
+        text-align: center;
+        cursor: pointer;
 
-        &:after{
-            width:50%; 
-            height: 3px;
-            background-color:$secondary-color;
-            content: ''; bottom: -2px;
-            @include horizontal-align;
-        }
-    }
-
-    @include media(767px){
-        h1{
-            @include font-size(30, 16);
+        &.active{
+            color:$primary-color;
         }
     }
 }
+
+.multi-feature-media{
+    list-style:none;
+    width: 100%;  
+    margin-bottom: 4*$marg;
+}
+
+.video-play{
+    @include middle;
+    @include border-radius(50%);
+    @extend .bg-grad;
+    @include font-size(30px, 16px);
+    color:$white;
+    width: 90px;
+    height: 90px;
+    border: none;
+    outline: none;
+
+    &:focus{
+        border: none;
+        outline: none;
+    }
+}
+
+
+
+
+
+ 
 
 
 
