--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,25 +1,23 @@
 .siteHeader {    
     background-color: $white;   
-    @include box-shadow($headGrey);  
-    position: fixed;
-    width: 100%;
-    z-index: 9;     
+    @include box-shadow($headGrey);      
     
     .logo{
         max-width: 235px; 
         padding:3*$pad 0;        
-    } 
-
-    &.sticky{
-        position: fixed;
-        width: 100%;
-        z-index: 9;
-        top: 0px;        
-        background-color: rgba(255, 255, 255, 0.9);    
-        @include box-shadow(0 4px 20px -10px rgba(#000, 0.2) );
-        @include transitions(padding, 300ms);             
-    }    
+    }        
 }
+
+#header_gbl{
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    background: #fff;
+    @include box-shadow(0 4px 20px -10px rgba(#000, 0.2) );
+    @include transitions(padding, 300ms); 
+}
+
+
 
 
 #mainNav{
